--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.16.2",
+		"immutable": "^3.8.1",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.48.2"
+		"react-native": "0.48.2",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2",
+		"redux-actions": "^2.2.1",
+		"redux-promise-middleware": "^4.4.1",
+		"redux-saga": "^0.15.6",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.0.2",
