--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 	},
 	"dependencies": {
 		"axios": "^0.16.2",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"immutable": "^3.8.1",
+		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.2",
 		"react-redux": "^5.0.6",
