--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"axios": "^0.16.2",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"immutable": "^3.8.1",
+		"moment": "^2.18.1",
 		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.2",
